--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 body{
     text-align: center;
-    background: linear-gradient(to bottom, darkblue, white);
+    background: linear-gradient(to bottom, green, white);
     background-repeat: no-repeat;
 }
 
@@ -18,7 +18,7 @@ body{
     width: 250px;
     height: 250px;
     border: 4px solid black;
-    border-radius: 100px;
+    border-radius: 500px;
 }
 
 
